add authentik to homepage

--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -74,3 +74,4 @@
         widget:
             type: authentik
             url: http://authentik-server.authentik:9000
+            key: {{HOMEPAGE_VAR_HOMEPAGE_TOKEN}}
