--- a/apps/homepage/config/settings.yaml
+++ b/apps/homepage/config/settings.yaml
@@ -2,8 +2,10 @@ tittle: Boomer Ok
 
 layout:
   The High Seas:
+    icon: the-pirate-bay
     style: row
     columns: 3
   Infrastructure:
     style: row
     columns: 4
+  Bookmarks:
