--- a/infra/controllers/storage/zfs/pod.yaml
+++ b/infra/controllers/storage/zfs/pod.yaml
@@ -19,9 +19,14 @@ spec:
       volumeMounts:
         - name: device-dir
           mountPath: /dev
+        - name: var-disks
+          mountPath: /var/disk
   volumes:
     - name: device-dir
       hostPath:
         path: /dev
+    - name: var-disks
+      hostPath:
+        path: /var/disk
   hostIPC: true
   hostPID: true
