--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -29,7 +29,9 @@ nodes:
           officialExtensions:
             - siderolabs/intel-ucode
             - siderolabs/realtek-firmware
-    talosImageURL: ghcr.io/siderolabs/installer
+            - siderolabs/zfs
+    kernelModules:
+      - name: zfs
     installDisk: /dev/disk/by-id/ata-KINGSTON_SHSS37A480G_50026B72590CF842
     controlPlane: true
     nameservers:
@@ -39,9 +41,6 @@ nodes:
       - device: /dev/disk/by-id/ata-CT2000MX500SSD1_2405E895C800
         partitions:
           - mountpoint: /var/disk/a
-      - device: /dev/disk/by-id/ata-CT2000MX500SSD1_2324E6E39F2C
-        partitions:
-          - mountpoint: /var/disk/b
     patches:
       - |-
         machine:
