--- a/apps/isponsorblocktv/kustomization.yaml
+++ b/apps/isponsorblocktv/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - deployment.yaml
-configMapGenerator:
+secretGenerator:
   - name: isponsorblocktv-config
     namespace: isponsorblocktv
     files:
