--- a/apps/isponsorblocktv/config.json
+++ b/apps/isponsorblocktv/config.json
@@ -15,7 +15,12 @@
 		"preview",
 		"music_offtopic"
 	],
-	"channel_whitelist": [],
+	"channel_whitelist": [
+		{
+			"id": "UCXuqSBlHAE6Xw-yeJA0Tunw",
+			"name": "Linus Tech Tips"
+		}
+	],
 	"skip_count_tracking": true,
 	"mute_ads": false,
 	"skip_ads": false,
