--- a/apps/arr/bazarr/deployment.yaml
+++ b/apps/arr/bazarr/deployment.yaml
@@ -31,6 +31,8 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: config
+            - mountPath: /media
+              name: media
             - mountPath: /data/movies
               name: movies
             - mountPath: /data/series
@@ -40,7 +42,11 @@ spec:
       volumes:
         - name: config
           hostPath:
-            path: /var/disk/a/data/arr/bazarr
+            path: /var/mnt/data/persistence/arr/bazarr
+            type: DirectoryOrCreate
+        - name: media
+          hostPath:
+            path: /var/mnt/data/media
             type: DirectoryOrCreate
         - name: movies
           hostPath:
