--- a/apps/homepage/config/widgets.yaml
+++ b/apps/homepage/config/widgets.yaml
@@ -18,8 +18,7 @@
 - resources:
     label: Storage
     disk:
-      - /mnt/a
-      - /mnt/b
+      - /data
 - unifi_console:
     url: https://192.168.1.1
     username: {{HOMEPAGE_VAR_UNIFI_USER}}
