--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: scratch
-  namespace: zfs
+  namespace: observability
 spec:
   selector:
     matchLabels:
