--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -25,12 +25,12 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: zfs
-            - mountPath: /prometheus
-              name: prometheus
+#            - mountPath: /prometheus
+#              name: prometheus
       volumes:
-        - name: prometheus
-          persistentVolumeClaim:
-            claimName: prometheus-kube-prometheus-stack-prometheus-db-prometheus-kube-prometheus-stack-prometheus-0
+#        - name: prometheus
+#          persistentVolumeClaim:
+#            claimName: prometheus-kube-prometheus-stack-prometheus-db-prometheus-kube-prometheus-stack-prometheus-0
         - name: zfs
           hostPath:
             path: /var/mnt/data
