--- a/apps/arr/tdarr/ingress.yaml
+++ b/apps/arr/tdarr/ingress.yaml
@@ -18,7 +18,7 @@ spec:
               service:
                 name: tdarr-service
                 port:
-                  name: tdarr
+                  name: tdarr-web
   tls:
     - secretName: local-tls
       hosts:
