--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -19,8 +19,16 @@ service:
       http:
         port: 8080
   bittorrent:
+    enabled: true
+    primary: false
+    nameOverride: torrent
+    type: LoadBalancer
+    annotations:
+      io.cilium/lb-ipam-ips: 192.168.1.244
     ports:
       bittorrent:
+        enabled: true
+        primary: false
         port: 18863
         protocol: TCP
 
