--- a/apps/arr/radarr/ingress.yaml
+++ b/apps/arr/radarr/ingress.yaml
@@ -6,7 +6,6 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: 192.168.1.222
     traefik.ingress.kubernetes.io/router.entrypoints: local
-#    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: traefik
   rules:
@@ -20,6 +19,16 @@ spec:
                 name: radarr-service
                 port:
                   name: radarr
+    - host: radarr-4k.local.boomerok.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: radarr-service
+                port:
+                  name: radarr-4k
   tls:
     - secretName: local-tls
       hosts:
