update recyclarr secrets

--- a/apps/arr/recyclarr/secrets.yaml
+++ b/apps/arr/recyclarr/secrets.yaml
@@ -1,1 +1,21 @@
-radarr-4k_api_key: ba260739f7db41c5a0ec85a732c51023
+radarr-4k_api_key: ENC[AES256_GCM,data:hXjNKx+w/udqhXjO+ESpWQC3q4qyUNT5jAvlzt8+LBQ=,iv:p/oYPYUyFkb7zilBae5a3k0512FPT9fpfAUcITzx8F0=,tag:hZNWDrI6Bj+c62bpeFJcVg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age10x7hgktrgv969cs8pzdfwdtrdz5lap0zyq78ts2yex68afrkvd3qsnk62k
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0WWZjb0d4aWxXd25UU2p6
+            bEdGNE9zQXNsQnZJa3M0WUpEUCt2YjE3MndBCjBsUFFXbmliMnRrMTFZcnZhQTgr
+            RUl0RW5DZEFKUTNITjR2NFNSL2RQYVEKLS0tIEo5ZHY5V2V0Mnd3a1N0VWRhOEZ1
+            cUFTV3RleFIzcXpPMFBJZDlsUVVCSEUKkHBxACtkx+D4hRDb0flCVEZUdpZxwd5M
+            cGbAZ2S6eC2q0b1R2rbM1qOcVzB6Pnt3m5IipftN+AvHQbCAzua81g==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-07-03T00:42:32Z"
+    mac: ENC[AES256_GCM,data:NRPw3ONiQijRMqmFi3NlHspkyUvtfyv3Rea8oSJJCk4QoCwaT2TnjkoSMf5cxnUaRJMS3g8cfQKrcjejuOCVfCjarwQ7+LL9ubyKZQc0Er2dpBAAlDH+bf/V1od1ZvXg/YVbVBvtRP5S5k707UVhQhuv2+C6aIdAyY4eoYtEpu0=,iv:VF8GeIumasR76QyHVXr5xmPDLjEMj+CW5PyJv3I63Eo=,tag:J4pKTEAGY8rQ3Vk+waaA0Q==,type:str]
+    pgp: []
+    encrypted_regex: (^(id|crt|key|screen_id)$|token|secret|password|api[-_.]?key)
+    version: 3.8.1
