--- a/apps/isponsorblocktv/kustomization.yaml
+++ b/apps/isponsorblocktv/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - deployment.yaml
+#  - deployment.yaml
 secretGenerator:
   - name: isponsorblocktv-config
     namespace: isponsorblocktv
