--- a/renovate.json
+++ b/renovate.json
@@ -30,7 +30,7 @@
       "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-r(?<build>\\d+)-ls(?<revision>\\d+)"
     },
     {
-      "matchPackageNames": ["linuxserver/overseerr"],
+      "matchPackageNames": ["linuxserver/overseerr", "linuxserver/tautulli"],
       "matchDatasources": ["docker"],
       "versioning": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<build>\\d+)"
     },
