--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -41,10 +41,10 @@ prometheus:
     volumes:
       - name: prometheus
         hostPath:
-          path: /var/persistence/observability/prometheus
+          path: /var/persistence/observability/prometheus/prometheus-db
           type: DirectoryOrCreate
     volumeMounts:
-      - mountPath: /prometheus
+      - mountPath: /prometheus/prometheus-db
         name: prometheus
 #    storageSpec:
 #      volumeClaimTemplate:
