--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -66,4 +66,4 @@ prometheus:
               storage: 50Gi
           selector:
             matchLabels:
-              app: prometheus
+              app: prometheus-os-pv
