--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -38,8 +38,7 @@ grafana:
 
 prometheus:
   prometheusSpec:
-    additionalArgs:
-      log.level: debug
+    logLevel: debug
     volumes:
       - name: prometheus-zfs
         hostPath:
