--- a/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-pv
+  name: prometheus-pv2
   namespace: observability
   labels:
-    app: prometheus
+    app: prometheus2
 spec:
   capacity:
     storage: 50Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /var/disk/a/data/observability/prometheus
+    path: /var/disk/a/data/observability/prometheus2
     type: DirectoryOrCreate
 ---
 apiVersion: v1
@@ -29,20 +29,3 @@ spec:
   hostPath:
     path: /var/persistence/prometheus
     type: DirectoryOrCreate
----
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: prometheus-os-pv
-#  namespace: observability
-#  labels:
-#    app: prometheus-os-pv
-#spec:
-#  accessModes:
-#    - ReadWriteOnce
-#  selector:
-#    matchLabels:
-#      app: prometheus-os-pv
-#  resources:
-#    requests:
-#      storage: 50Gi
