--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -38,28 +38,33 @@ grafana:
 
 prometheus:
   prometheusSpec:
+    securityContext:
+      runAsGroup: 0
+      runAsNonRoot: false
+      runAsUser: 0
+      fsGroup: 0
     logLevel: debug
     volumes:
       - name: prometheus-zfs
         hostPath:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
-      - name: prometheus-os
-        hostPath:
-          path: /var/persistence/prometheus
-          type: DirectoryOrCreate
+#      - name: prometheus-os
+#        hostPath:
+#          path: /var/persistence/prometheus
+#          type: DirectoryOrCreate
     volumeMounts:
       - mountPath: /zfs
         name: prometheus-zfs
-      - mountPath: /prometheus
-        name: prometheus-os
+#      - mountPath: /prometheus
+#        name: prometheus-os
     storageSpec:
-      volumeClaimTemplate: {}
-#        spec:
-#          accessModes: ["ReadWriteOnce"]
-#          resources:
-#            requests:
-#              storage: 50Gi
-#          selector:
-#            matchLabels:
-#              app: prometheus-os-pv
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 50Gi
+          selector:
+            matchLabels:
+              app: prometheus-os-pv
