--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -67,4 +67,4 @@ prometheus:
               storage: 50Gi
           selector:
             matchLabels:
-              app: prometheus-os-pv
+              app: prometheus2
