--- a/infra/controllers/observability/kube-prometheus-stack/kustomization.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - repository.yaml
-  - release.yaml
+#  - release.yaml
   - volumes/alertmanager-pv.yaml
   - volumes/grafana-pv.yaml
   - volumes/grafana-pvc.yaml
