--- a/apps/arr/bazarr/ingress.yaml
+++ b/apps/arr/bazarr/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: arr
   annotations:
     external-dns.alpha.kubernetes.io/target: 192.168.1.222
-    traefik.ingress.kubernetes.io/router.entrypoints: local
+#    traefik.ingress.kubernetes.io/router.entrypoints: local
 #    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: traefik
