--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -53,6 +53,9 @@ prometheus:
         name: prometheus-zfs
 #      - mountPath: /prometheus
 #        name: prometheus-os
+    securityContext:
+      runAsUser: 1000
+      runAsGroup: 2000
     storageSpec:
       volumeClaimTemplate:
         spec:
