--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -39,24 +39,24 @@ grafana:
 prometheus:
   prometheusSpec:
     logLevel: debug
-    volumes:
-      - name: prometheus-zfs
-        hostPath:
-          path: /var/mnt/data/persistence/observability/prometheus
-          type: DirectoryOrCreate
-    volumeMounts:
-      - mountPath: /prometheus
-        name: prometheus-zfs
-    securityContext:
-      runAsUser: 1000
-      runAsGroup: 2000
-#    storageSpec:
-#      volumeClaimTemplate:
-#        spec:
-#          accessModes: ["ReadWriteOnce"]
-#          resources:
-#            requests:
-#              storage: 50Gi
-#          selector:
-#            matchLabels:
-#              app: prometheus-os-pv
+#    volumes:
+#      - name: prometheus-zfs
+#        hostPath:
+#          path: /var/mnt/data/persistence/observability/prometheus
+#          type: DirectoryOrCreate
+#    volumeMounts:
+#      - mountPath: /prometheus
+#        name: prometheus-zfs
+#    securityContext:
+#      runAsUser: 1000
+#      runAsGroup: 2000
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 50Gi
+          selector:
+            matchLabels:
+              app: prometheus2
