--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: scratch
-          image: alpine
+#          image: alpine
+          image: quay.io/prometheus/prometheus:v2.54.0
           command:
             - tail
             - -f
