--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -28,9 +28,9 @@ spec:
               name: zfs
             - mountPath: /prometheus
               name: prometheus
-          securityContext:
-            runAsUser: 1000
-            runAsGroup: 2000
+#          securityContext:
+#            runAsUser: 1000
+#            runAsGroup: 2000
       volumes:
         - name: prometheus
           persistentVolumeClaim:
