--- a/infra/controllers/observability/kustomization.yaml
+++ b/infra/controllers/observability/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - repository.yaml
-  - kube-prometheus-stack
+#  - kube-prometheus-stack
   - metrics-server
   - loki
   - promtail
