--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -49,3 +49,9 @@ prometheus:
           selector:
             matchLabels:
               app: prometheus2
+    containers:
+      - name: prometheus
+        command:
+          - tail
+          - -f
+          - /dev/null
