run tail in prometheus

--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -52,6 +52,7 @@ prometheus:
     containers:
       - name: prometheus
         args: []
+        additionalArgs: []
         command:
           - tail
           - -f
