enable prometheus again

--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -54,8 +54,6 @@ prometheus:
         args: []
         additionalArgs: []
         command:
-          - |
-            tail
-            -f
-            /dev/null
-            & prometheus --help
+          - tail
+          - -f
+          - /dev/null 2>/dev/null
